--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0P4c/rNBDx6t0P4IrjstU",
+      "authorship_tag": "ABX9TyM+T3Nod9Q/GuoUGJ5dJNCr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -83,7 +83,7 @@
         "id": "7tFC8vcrUvnm",
         "outputId": "30b9814a-99b0-4049-8158-25f46e685224"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,6 +96,43 @@
             "Gross Profit: $7200.0\n",
             "Taxes: $2160.0\n",
             "Net Profit: $5040.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = float(input(\"Enter number: \"))\n",
+        "num2 = float(input(\"Enter number: \"))\n",
+        "oper = input(\"Enter operator (+, -, *, /): \")\n",
+        "\n",
+        "if oper == \"+\":\n",
+        "  print(num1 + num2)\n",
+        "if oper == \"-\":\n",
+        "  print(num1 - num2)\n",
+        "if oper == \"*\":\n",
+        "  print(num1 * num2)\n",
+        "if oper == \"/\":\n",
+        "  print(num1/num2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f1gM4251BtcQ",
+        "outputId": "f8f2a594-0a53-4310-8e37-408369652496"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number: 25\n",
+            "Enter number: 30\n",
+            "Enter operator (+, -, *, /): -\n",
+            "-5.0\n"
           ]
         }
       ]
