--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+T3Nod9Q/GuoUGJ5dJNCr",
+      "authorship_tag": "ABX9TyNq/W1P5FSPuZZPU++wIULm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "\n",
         "cogs = 0.4 * sales\n",
         "gross_profit = sales - cogs\n",
-        "taxes = gross_profit * tax_rate\n",
+        "taxes = gross_profit * tax_rate/100\n",
         "net_income = gross_profit - taxes\n",
         "\n",
         "print(f\"Sales: ${sales}\")\n",
@@ -81,21 +81,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7tFC8vcrUvnm",
-        "outputId": "30b9814a-99b0-4049-8158-25f46e685224"
+        "outputId": "a6405b12-abcb-4030-8b32-3dadb97ac54e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Enter sales value ($): 12000\n",
-            "Enter tax rate (%): .3\n",
+            "Enter tax rate (%): 3\n",
             "Sales: $12000.0\n",
             "COGS: $4800.0\n",
             "Gross Profit: $7200.0\n",
-            "Taxes: $2160.0\n",
-            "Net Profit: $5040.0\n"
+            "Taxes: $216.0\n",
+            "Net Profit: $6984.0\n"
           ]
         }
       ]
@@ -123,7 +123,7 @@
         "id": "f1gM4251BtcQ",
         "outputId": "f8f2a594-0a53-4310-8e37-408369652496"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
