--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNq/W1P5FSPuZZPU++wIULm",
+      "authorship_tag": "ABX9TyNqXLTzOU11BzGWpxBSiF5N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,34 +105,46 @@
       "source": [
         "num1 = float(input(\"Enter number: \"))\n",
         "num2 = float(input(\"Enter number: \"))\n",
-        "oper = input(\"Enter operator (+, -, *, /): \")\n",
+        "oper = input(\"Enter operator (+, -, *, /, etc.): \")\n",
         "\n",
         "if oper == \"+\":\n",
-        "  print(num1 + num2)\n",
-        "if oper == \"-\":\n",
-        "  print(num1 - num2)\n",
-        "if oper == \"*\":\n",
-        "  print(num1 * num2)\n",
-        "if oper == \"/\":\n",
-        "  print(num1/num2)"
+        "  res = num1 + num2\n",
+        "elif oper == \"-\":\n",
+        "  res = num1 - num2\n",
+        "elif oper == \"*\":\n",
+        "  res = num1 * num2\n",
+        "elif oper == \"/\":\n",
+        "  res = num1 / num2\n",
+        "elif oper == \"**\":\n",
+        "  res = num1 ** num2\n",
+        "elif oper == \"//\":\n",
+        "  res = num1 // num2\n",
+        "elif oper == \"%\":\n",
+        "  res = num1 % num2\n",
+        "else:\n",
+        "  print(\"Invalid operator\")\n",
+        "  res = None\n",
+        "\n",
+        "\n",
+        "print(f\"Result: {res}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f1gM4251BtcQ",
-        "outputId": "f8f2a594-0a53-4310-8e37-408369652496"
+        "outputId": "19485565-e002-4ac3-cc60-f026d783d0d6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter number: 25\n",
-            "Enter number: 30\n",
-            "Enter operator (+, -, *, /): -\n",
-            "-5.0\n"
+            "Enter number: 3\n",
+            "Enter number: 2\n",
+            "Enter operator (+, -, *, /, etc.): **\n",
+            "Result: 9.0\n"
           ]
         }
       ]
