--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqXLTzOU11BzGWpxBSiF5N",
+      "authorship_tag": "ABX9TyO5A8bguR9WEMIq/DClKszL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
         "id": "7tFC8vcrUvnm",
         "outputId": "a6405b12-abcb-4030-8b32-3dadb97ac54e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
         "id": "f1gM4251BtcQ",
         "outputId": "19485565-e002-4ac3-cc60-f026d783d0d6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,6 +145,44 @@
             "Enter number: 2\n",
             "Enter operator (+, -, *, /, etc.): **\n",
             "Result: 9.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for hour in range(1,9,1):\n",
+        "  fee = 5 + 2.5 * hour\n",
+        "  if fee < 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee > 25:\n",
+        "    fee = 20.0\n",
+        "\n",
+        "  print(f\"Hour {hour}: $\",fee)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8cVJ44keucHB",
+        "outputId": "fc20483f-2142-4797-ab46-bcb39505ccf1"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hour 1: $ 10.0\n",
+            "Hour 2: $ 10.0\n",
+            "Hour 3: $ 12.5\n",
+            "Hour 4: $ 15.0\n",
+            "Hour 5: $ 17.5\n",
+            "Hour 6: $ 20.0\n",
+            "Hour 7: $ 22.5\n",
+            "Hour 8: $ 25.0\n"
           ]
         }
       ]
