--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5A8bguR9WEMIq/DClKszL",
+      "authorship_tag": "ABX9TyMnWzaytug4VnFqRfVgR+Ct",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,14 +152,14 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\" Hour Fee\")\n",
         "for hour in range(1,9,1):\n",
         "  fee = 5 + 2.5 * hour\n",
         "  if fee < 10:\n",
         "    fee = 10.0\n",
         "  elif fee > 25:\n",
         "    fee = 20.0\n",
-        "\n",
-        "  print(f\"Hour {hour}: $\",fee)\n",
+        "  print(f\" {hour}: \" , fee)\n",
         "\n"
       ],
       "metadata": {
@@ -167,22 +167,66 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8cVJ44keucHB",
-        "outputId": "fc20483f-2142-4797-ab46-bcb39505ccf1"
+        "outputId": "02e74a2e-6e52-4ec5-d5c6-ccb95e3c4851"
       },
-      "execution_count": 44,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hour 1: $ 10.0\n",
-            "Hour 2: $ 10.0\n",
-            "Hour 3: $ 12.5\n",
-            "Hour 4: $ 15.0\n",
-            "Hour 5: $ 17.5\n",
-            "Hour 6: $ 20.0\n",
-            "Hour 7: $ 22.5\n",
-            "Hour 8: $ 25.0\n"
+            " Hour Fee\n",
+            " 1:  10.0\n",
+            " 2:  10.0\n",
+            " 3:  12.5\n",
+            " 4:  15.0\n",
+            " 5:  17.5\n",
+            " 6:  20.0\n",
+            " 7:  22.5\n",
+            " 8:  25.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "ticketprice = 10\n",
+        "defaultAudience = 20\n",
+        "\n",
+        "print(\" Ad$ Profit\")\n",
+        "for adMoney in range(0,201,25):\n",
+        "  revenue =  (defaultAudience + 2 * round( math.sqrt(adMoney))) * ticketprice\n",
+        "  costs = 200 + adMoney\n",
+        "  profit = revenue - costs\n",
+        "  print(f\"{float(adMoney)}  {float(profit)}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XTO4ib8SCnqM",
+        "outputId": "47ff4db8-8e54-43cd-8bac-933e52ae52d4"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Ad$ Profit\n",
+            "0.0  0.0\n",
+            "25.0  75.0\n",
+            "50.0  90.0\n",
+            "75.0  105.0\n",
+            "100.0  100.0\n",
+            "125.0  95.0\n",
+            "150.0  90.0\n",
+            "175.0  85.0\n",
+            "200.0  80.0\n"
           ]
         }
       ]
