--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnWzaytug4VnFqRfVgR+Ct",
+      "authorship_tag": "ABX9TyMb7ApxLjoNuh4jFNBYGfRW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,7 +169,7 @@
         "id": "8cVJ44keucHB",
         "outputId": "02e74a2e-6e52-4ec5-d5c6-ccb95e3c4851"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +211,91 @@
         "id": "XTO4ib8SCnqM",
         "outputId": "47ff4db8-8e54-43cd-8bac-933e52ae52d4"
       },
-      "execution_count": 65,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Ad$ Profit\n",
+            "0.0  0.0\n",
+            "25.0  75.0\n",
+            "50.0  90.0\n",
+            "75.0  105.0\n",
+            "100.0  100.0\n",
+            "125.0  95.0\n",
+            "150.0  90.0\n",
+            "175.0  85.0\n",
+            "200.0  80.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\" Hour Fee\")\n",
+        "hour = 1\n",
+        "while hour < 9: # or while hour <= 8\n",
+        "  fee = 5 + 2.5 * hour\n",
+        "  if fee < 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee > 25:\n",
+        "    fee = 20.0\n",
+        "  hour += 1\n",
+        "  print(f\" {hour}: \" , fee)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dNfp0eADixZy",
+        "outputId": "02e0b2b9-29f8-451f-f906-f24952998a87"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Hour Fee\n",
+            " 2:  10.0\n",
+            " 3:  10.0\n",
+            " 4:  12.5\n",
+            " 5:  15.0\n",
+            " 6:  17.5\n",
+            " 7:  20.0\n",
+            " 8:  22.5\n",
+            " 9:  25.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "ticketprice = 10\n",
+        "defaultAudience = 20\n",
+        "adMoney = 0\n",
+        "print(\" Ad$ Profit\")\n",
+        "while adMoney < 201:\n",
+        "  revenue =  (defaultAudience + 2 * round( math.sqrt(adMoney))) * ticketprice\n",
+        "  costs = 200 + adMoney\n",
+        "  profit = revenue - costs\n",
+        "  print(f\"{float(adMoney)}  {float(profit)}\")\n",
+        "  adMoney += 25"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hiflASx_jRuC",
+        "outputId": "a730549b-fc59-4cbc-b7e7-b91f44ddb7ef"
+      },
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
