--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMb7ApxLjoNuh4jFNBYGfRW",
+      "authorship_tag": "ABX9TyP2Tyw43jucdwFB7kjNDnAp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,7 +253,7 @@
         "id": "dNfp0eADixZy",
         "outputId": "02e0b2b9-29f8-451f-f906-f24952998a87"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +295,7 @@
         "id": "hiflASx_jRuC",
         "outputId": "a730549b-fc59-4cbc-b7e7-b91f44ddb7ef"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,6 +311,61 @@
             "150.0  90.0\n",
             "175.0  85.0\n",
             "200.0  80.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "print(\"Welcome to rock, paper, scissors!\")\n",
+        "play = input(\"Do you want to play? (y/n)\")\n",
+        "\n",
+        "while play == \"y\":\n",
+        "  userChoice = input(\"Enter your choice (rock, paper, scissors): \")\n",
+        "  computerChoice = random.choice(['rock', 'paper', 'scissors'])\n",
+        "  print(f\"Computer chose\" ,{computerChoice})\n",
+        "  if userChoice == computerChoice:\n",
+        "    print(\"It's a tie\")\n",
+        "  elif (userChoice == \"rock\" and computerChoice == \"scissors\") or  (userChoice == \"paper\" and computerChoice == \"rock\") or  (userChoice == \"scissors\" and computerChoice == \"paper\"):\n",
+        "    print(\"You win\")\n",
+        "  else:\n",
+        "    print(\"You lose\")\n",
+        "  play = input(\"Do you want to play? (y/n)\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "grlM-wTgueP4",
+        "outputId": "b43635f2-68cf-420e-b3f8-6222428f8d79"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Welcome to rock, paper, scissors!\n",
+            "Do you want to play? (y/n)y\n",
+            "Enter your choice (rock, paper, scissors): rock\n",
+            "Computer chose {'paper'}\n",
+            "You lose\n",
+            "Do you want to play? (y/n)y\n",
+            "Enter your choice (rock, paper, scissors): paper\n",
+            "Computer chose {'paper'}\n",
+            "It's a tie\n",
+            "Do you want to play? (y/n)y\n",
+            "Enter your choice (rock, paper, scissors): scissors\n",
+            "Computer chose {'rock'}\n",
+            "You lose\n",
+            "Do you want to play? (y/n)n\n"
           ]
         }
       ]
