--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2Tyw43jucdwFB7kjNDnAp",
+      "authorship_tag": "ABX9TyNB0doK9xNTxmesQ/EEpELE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -336,8 +336,7 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -346,7 +345,7 @@
         "id": "grlM-wTgueP4",
         "outputId": "b43635f2-68cf-420e-b3f8-6222428f8d79"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -366,6 +365,83 @@
             "Computer chose {'rock'}\n",
             "You lose\n",
             "Do you want to play? (y/n)n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = []\n",
+        "player = input(\"Enter player name: \")\n",
+        "while player != \"\":\n",
+        "  L.append(player)\n",
+        "  player = input(\"Enter player name:)"
+      ],
+      "metadata": {
+        "id": "8kN00soH8FOU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = []\n",
+        "\n",
+        "while True:\n",
+        "    num = int(input(\"Enter a number: \"))\n",
+        "    if num == 0:\n",
+        "        break\n",
+        "    numbers.append(num)\n",
+        "\n",
+        "numbers.sort(reverse=True)\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "id": "2--n6aH_0jpg",
+        "outputId": "b4b50275-9dee-42cb-9d4c-18c14bffc953",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 4\n",
+            "Enter a number: 3\n",
+            "Enter a number: 0\n",
+            "[4, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weight = [10.0,9.9,10.1,10.05]\n",
+        "\n",
+        "print(max(weight))\n",
+        "print(sum(weight) / len(weight))\n"
+      ],
+      "metadata": {
+        "id": "spUWRhJp6jk0",
+        "outputId": "9efc83b3-d035-4305-9166-9209fc786aaf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.1\n",
+            "10.0125\n"
           ]
         }
       ]
