--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNB0doK9xNTxmesQ/EEpELE",
+      "authorship_tag": "ABX9TyMP2jfNK0pxW5fL1qNknpnL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -399,25 +399,10 @@
         "print(numbers)"
       ],
       "metadata": {
-        "id": "2--n6aH_0jpg",
-        "outputId": "b4b50275-9dee-42cb-9d4c-18c14bffc953",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2--n6aH_0jpg"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a number: 4\n",
-            "Enter a number: 3\n",
-            "Enter a number: 0\n",
-            "[4, 3]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -428,20 +413,43 @@
         "print(sum(weight) / len(weight))\n"
       ],
       "metadata": {
-        "id": "spUWRhJp6jk0",
-        "outputId": "9efc83b3-d035-4305-9166-9209fc786aaf",
+        "id": "spUWRhJp6jk0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "products = {\n",
+        "    'P-01' : 9.95,\n",
+        "    'P-02' : 10.50,\n",
+        "}\n",
+        "id = input(\"Enter product id (P-01 or P-02): \")\n",
+        "\n",
+        "if id in products:\n",
+        "  print(f\"Price = {products[id]}\")\n",
+        "else:\n",
+        "  print(F\"Product {id}  not found\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pVN1Zgttjzlq",
+        "outputId": "06353c7b-0780-4397-b1e9-ee6d72f9545d"
       },
-      "execution_count": 2,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10.1\n",
-            "10.0125\n"
+            "Enter product id (P-01 or P-02): P-02\n",
+            "Price = 10.5\n"
           ]
         }
       ]
