--- a/inClassAssignments.ipynb
+++ b/inClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMP2jfNK0pxW5fL1qNknpnL",
+      "authorship_tag": "ABX9TyOFa6ThZxBPdCuzg3GcLhY1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -399,10 +399,26 @@
         "print(numbers)"
       ],
       "metadata": {
-        "id": "2--n6aH_0jpg"
+        "id": "2--n6aH_0jpg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c9a213a-ff13-493e-b50f-fe24c5ebe49f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 10\n",
+            "Enter a number: 12\n",
+            "Enter a number: 11\n",
+            "Enter a number: 0\n",
+            "[12, 11, 10]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -450,6 +466,41 @@
           "text": [
             "Enter product id (P-01 or P-02): P-02\n",
             "Price = 10.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = {}\n",
+        "while True:\n",
+        "  name = input(\"Enter name: \")\n",
+        "  if name == \"\":\n",
+        "    break\n",
+        "  if name in names:\n",
+        "    names[name] +=1\n",
+        "  else:\n",
+        "    names[name] = 1\n",
+        "\n",
+        "print(names)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XRc4Scs-oKYj",
+        "outputId": "1e3162cf-6c38-4812-a962-0eb84314b42a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter name: bob\n",
+            "Enter name: bob\n",
+            "Enter name: bob\n"
           ]
         }
       ]
